Fix flex item overflowing

--- a/task-manager-ui/src/app/pages/user-dashboard/user-dashboard.component.css
+++ b/task-manager-ui/src/app/pages/user-dashboard/user-dashboard.component.css
@@ -96,6 +96,7 @@ h2 {
   height: 200px;
   position: relative;
   flex: 1;
+  min-width: 0;
 }
 
 .charts {
